force-app/main/default/objects/SAC_ParametrizacionSLATME__c/SAC_ParametrizacionSLATME__c.object-meta.xml
<CustomObject>
    <label>Parametrización SLA / TMO</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parametrizaciones SLA / TMO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>