force-app/main/default/objects/SAC_ParametrizacionSLATME__c/fields/SAC_CanalProcedencia__c.field-meta.xml
<CustomField>
    <fullName>SAC_CanalProcedencia__c</fullName>
    <label>Procedencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Canal_Procedencia</valueSetName>
    </valueSet>
</CustomField>