force-app/main/default/objects/SAC_ParametrizacionSLATME__c/fields/SAC_DuplicadoMCCProcedenciaEstado__c.field-meta.xml
<CustomField>
    <fullName>SAC_DuplicadoMCCProcedenciaEstado__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>DuplicadoMCCProcedenciaEstado</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>