force-app/main/default/objects/SAC_ParametrizacionSLATME__c/fields/SAC_Duracion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Duracion__c</fullName>
    <label>Duración(Días)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>