force-app/main/default/objects/SAC_ParametrizacionSLATME__c/fields/SAC_Estados__c.field-meta.xml
<CustomField>
    <fullName>SAC_Estados__c</fullName>
    <label>Estados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_001</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>SAC_002</fullName>
                <label>Análisis</label>
            </value>
            <value>
                <fullName>SAC_003</fullName>
                <label>Redacción</label>
            </value>
            <value>
                <fullName>SAC_004</fullName>
                <label>Ejecución</label>
            </value>
            <value>
                <fullName>SAC_006</fullName>
                <label>Subsanación</label>
            </value>
            <value>
                <fullName>SAC_007</fullName>
                <label>Negociación</label>
            </value>
            <value>
                <fullName>SAC_009</fullName>
                <isActive>false</isActive>
                <label>Baja</label>
            </value>
            <value>
                <fullName>SAC_008</fullName>
                <isActive>false</isActive>
                <label>Derivación</label>
            </value>
            <value>
                <fullName>SAC_005</fullName>
                <isActive>false</isActive>
                <label>Inadmisión</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>