force-app/main/default/objects/SAC_ParametrizacionSLATME__c/fields/SAC_MCC__c.field-meta.xml
<CustomField>
    <fullName>SAC_MCC__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MCC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>SAC Detalle</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipName>Parametrizaciones_SLA_TME</relationshipName>
    <type>Lookup</type>
</CustomField>