force-app/main/default/objects/SAC_ParametrizacionSLATME__c/fields/SAC_TMEGeneral__c.field-meta.xml
<CustomField>
    <fullName>SAC_TMEGeneral__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TMO General</label>
    <type>Checkbox</type>
</CustomField>