force-app/main/default/objects/SAC_ParametrizacionSLATME__c/recordTypes/SAC_Maestro.recordType-meta.xml
<RecordType>
    <fullName>SAC_Maestro</fullName>
    <active>true</active>
    <description>Record type para la insercción de las parametrizaciones SLA/TMO en los MCC Detalle</description>
    <label>Maestro</label>
</RecordType>