force-app/main/default/objects/SAC_ParametrizacionSLATME__c/recordTypes/SAC_SLAAlta.recordType-meta.xml
<RecordType>
    <fullName>SAC_SLAAlta</fullName>
    <active>true</active>
    <label>SLA Alta</label>
</RecordType>