force-app/main/default/objects/SAC_ParametrizacionSLATME__c/recordTypes/SAC_SLACircuitosEspeciales.recordType-meta.xml
<RecordType>
    <fullName>SAC_SLACircuitosEspeciales</fullName>
    <active>true</active>
    <description>Record Type para los SLA de los casos con circuito especial</description>
    <label>SLA Circuitos Especiales</label>
</RecordType>