force-app/main/default/objects/SAC_ParametrizacionSLATME__c/recordTypes/SAC_SLALetrado.recordType-meta.xml
<RecordType>
    <fullName>SAC_SLALetrado</fullName>
    <active>true</active>
    <label>SLA Letrado</label>
</RecordType>