force-app/main/default/objects/SAC_ParametrizacionSLATME__c/recordTypes/SAC_SLANegociacion.recordType-meta.xml
<RecordType>
    <fullName>SAC_SLANegociacion</fullName>
    <active>true</active>
    <description>SLA configurable para estado Negociación</description>
    <label>SLA Negociación</label>
</RecordType>