force-app/main/default/objects/SAC_ParametrizacionSLATME__c/recordTypes/SAC_SLARegulatorio.recordType-meta.xml
<RecordType>
    <fullName>SAC_SLARegulatorio</fullName>
    <active>true</active>
    <label>SLA Regulatorio</label>
</RecordType>