force-app/main/default/objects/SAC_ParametrizacionSLATME__c/recordTypes/SAC_TME.recordType-meta.xml
<RecordType>
    <fullName>SAC_TME</fullName>
    <active>true</active>
    <label>TME</label>
</RecordType>