force-app/main/default/objects/SAC_ParametrizacionSLATME__c/validationRules/SAC_Duracion.validationRule-meta.xml
<ValidationRule>
    <fullName>SAC_Duracion</fullName>
    <active>true</active>
    <description>La duración de la parametrización no puede ser menor o igual que 0</description>
    <errorConditionFormula>SAC_Duracion__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>SAC_Duracion__c</errorDisplayField>
    <errorMessage>La duración de la parametrización no puede ser menor o igual que 0</errorMessage>
</ValidationRule>