force-app/main/default/objects/SAC_ParametrizacionSLATME__c/listViews/SAC_Maestro.listView-meta.xml
<ListView>
    <fullName>SAC_Maestro</fullName>
    <columns>NAME</columns>
    <columns>SAC_Duracion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_ParametrizacionSLATME__c.SAC_Maestro</value>
    </filters>
    <label>Maestro</label>
    <sharedTo>
        <roleAndSubordinates>SAC_General</roleAndSubordinates>
    </sharedTo>
</ListView>