force-app/main/default/objects/SAC_ParametrizacionSLATME__c/listViews/SAC_SLA_Alta.listView-meta.xml
<ListView>
    <fullName>SAC_SLA_Alta</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_ParametrizacionSLATME__c.SAC_SLAAlta</value>
    </filters>
    <label>SLA Alta</label>
    <sharedTo>
        <roleAndSubordinates>SAC_General</roleAndSubordinates>
    </sharedTo>
</ListView>