force-app/main/default/objects/SAC_ParametrizacionSLATME__c/listViews/SAC_SLACircuitosEspeciales.listView-meta.xml
<ListView>
    <fullName>SAC_SLACircuitosEspeciales</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_ParametrizacionSLATME__c.SAC_SLACircuitosEspeciales</value>
    </filters>
    <label>SLA Circuitos especiales</label>
    <sharedTo>
        <role>SAC_General</role>
    </sharedTo>
</ListView>