force-app/main/default/objects/SAC_ParametrizacionSLATME__c/listViews/SAC_SLALetrado.listView-meta.xml
<ListView>
    <fullName>SAC_SLALetrado</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_ParametrizacionSLATME__c.SAC_SLALetrado</value>
    </filters>
    <label>SLA Letrado</label>
    <sharedTo>
        <roleAndSubordinates>SAC_General</roleAndSubordinates>
    </sharedTo>
</ListView>